--- a/css/wpcf7_placeholder.css
+++ b/css/wpcf7_placeholder.css
@@ -16,3 +16,22 @@
 	color:#5b564d;
 	opacity:1;
 }
+
+.wpcf7 input.wpcf7-not-valid::-webkit-input-placeholder,
+.wpcf7 textarea.wpcf7-not-valid::-webkit-input-placeholder{
+	color:#fff;
+}
+.wpcf7 input.wpcf7-not-valid:-ms-input-placeholder,
+.wpcf7 textarea.wpcf7-not-valid:-ms-input-placeholder{
+	color:#fff;
+}
+.wpcf7 input.wpcf7-not-valid:-moz-placeholder,
+.wpcf7 textarea.wpcf7-not-valid:-moz-placeholder{
+	color:#fff;
+	opacity:1;
+}
+.wpcf7 input.wpcf7-not-valid::-moz-placeholder,
+.wpcf7 textarea.wpcf7-not-valid::-moz-placeholder{
+	color:#fff;
+	opacity:1;
+}
