--- a/css/wpcf7_valid_and_message.css
+++ b/css/wpcf7_valid_and_message.css
@@ -12,11 +12,11 @@
 .wpcf7 div.wpcf7-mail-sent-ok{
 	display: block;
 	width: 100%;
-	height: 467px;
+	height: 100%;
 	position: absolute;
 	top: -40px;
 	left: -10px;
-	padding: 67% 0;
+	padding: 50% 0;
 	border: 0px;
 	color: #fff;
 	font-size: 20px;
